<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_add_dart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/columnFirst"
    android:onClick="hideKeyboard"
    tools:context=".AddDartActivity">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dp_10"
        android:contentDescription="@string/darts_image"
        android:scaleType="fitStart"
        android:src="@drawable/dart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/dart_padding"
                android:text="@string/choose_points"
                android:textSize="@dimen/dart_text" />
            <Button
                android:id="@+id/currScore"
                android:layout_width="@dimen/dart_button"
                android:layout_height="@dimen/dart_button"
                android:padding="@dimen/dart_padding"
                android:text="@string/zero"
                android:textSize="@dimen/dart_text"
                android:onClick="onClickSetPoint"/>
        </LinearLayout>

        <com.example.scorekeeper.MyKeyboard
            android:id="@+id/keyboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/dart_padding"
                android:text="@string/choose_multiplier"
                android:textSize="@dimen/dart_text" />

            <RadioGroup
                android:id="@+id/rg_multiplier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:checkedButton="@id/rb_1"
                android:gravity="end"
                android:padding="@dimen/dart_padding" >
                <RadioButton
                    android:id="@+id/rb_1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/dart_text"
                    android:text="@string/x1" />
                <RadioButton
                    android:id="@+id/rb_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:textSize="@dimen/dart_text"
                    android:text="@string/x2" />
                <RadioButton
                    android:id="@+id/rb_3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:textSize="@dimen/dart_text"
                    android:text="@string/x3" />
            </RadioGroup>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:padding="@dimen/dart_padding"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/dart_padding"
                android:text="@string/result"
                android:textSize="@dimen/dart_text"
                android:textStyle="bold" />
            <Button
                android:id="@+id/result_score"
                android:layout_width="@dimen/dart_button"
                android:layout_height="@dimen/dart_button"
                android:padding="@dimen/dart_padding"
                android:clickable="false"
                android:text="@string/zero"
                android:textSize="@dimen/dart_text" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_dart"
            android:textSize="@dimen/dart_text"
            android:onClick="addDartPoints"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>